--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
     "/css/app.css": "/css/app.css",
     "/css/auth.css": "/css/auth.css",
     "/js/core.js": "/js/core.js",
-    "/js/auth.js": "/js/auth.js"
+    "/js/auth.js": "/js/auth.js",
+    "/js/plugins/core.js": "/js/plugins/core.js"
 }
