Add profile dropdown options

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,8 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/css/auth.css": "/css/auth.css",
+    "/css/admin/core.css": "/css/admin/core.css",
     "/js/core.js": "/js/core.js",
+    "/js/admin/manage.js": "/js/admin/manage.js",
     "/js/plugins/core.js": "/js/plugins/core.js"
 }
