--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "vue-focus": "^2.1.0"
+        "vue-focus": "^2.1.0",
+        "vue-js-toggle-button": "^1.2.3"
     }
 }
