--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "geoip2/geoip2": "~2.0",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "zippopotamus/zippopotamus": "^0.9.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
