--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "flatpickr": "^4.4.6",
         "vue-avatar": "^2.1.4",
         "vue-focus": "^2.1.0",
         "vue-js-toggle-button": "^1.2.3"
