--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "mark.js": "^8.11.1",
+        "tailwindcss": "^0.6.4",
         "vue": "^2.5.7"
     },
     "dependencies": {
